[package]
name = "u-num-it"
authors = ["a.nvlkv <a.nvlkv@protonmail.ch>"]
repository = "https://github.com/anvlkv/u-num-it"
edition = "2021"
version = "0.1.0"
license = "MIT"
rust-version = "1.67"
description = "typenum macro for matching types from a given range"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["parsing", "full"] }
quote = "1.0"
eval = "0.4.3"
proc-macro2 = "1.0.79"

[dev-dependencies]
typenum = "1"
