[package]
name = "u-num-it"
version = "0.3.2"
edition = "2021"
rust-version = "1.67"
description = "typenum macro for matching types from a given range"
repository = "https://github.com/anvlkv/u-num-it"
license = "Unlicense"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }

[dev-dependencies]
typenum = "1"
